# l8w8jwt

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  build-mingw.sh  build.bat  build.sh  codecov.yml  doxyfile  library.c  library.h  run-tests.bat  run-tests.sh  test.bat  test.sh
.circleci/: config.yml
.github/: FUNDING.yml
cmake/: FindGcov.cmake  FindLcov.cmake
docs/: algs_8h.html  algs_8h__dep__incl.dot  algs_8h__dep__incl.map  algs_8h__dep__incl.md5  algs_8h_source.html  annotated.html  base64_8h.html  base64_8h__incl.dot  base64_8h__incl.map  base64_8h__incl.md5  base64_8h_source.html  claim_8h.html  claim_8h__dep__incl.dot  claim_8h__dep__incl.map  claim_8h__dep__incl.md5  claim_8h__incl.dot  claim_8h__incl.map  claim_8h__incl.md5  claim_8h_source.html  classes.html  decode_8h.html  decode_8h__incl.dot  decode_8h__incl.map  decode_8h__incl.md5  decode_8h_source.html  dir_4cc40c4817b6dd8b994fc53e2126ebc6.html  dir_4cc40c4817b6dd8b994fc53e2126ebc6_dep.map  dir_4cc40c4817b6dd8b994fc53e2126ebc6_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  encode_8h.html  encode_8h__incl.dot  encode_8h__incl.map  encode_8h__incl.md5  encode_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  (+36 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  search.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+3 more)
examples/: .gitignore  CMakeLists.txt  README.md
examples/eddsa/: decode.c  encode.c  keygen.c
examples/es256/: decode.c  encode.c  main.c
examples/es256k/: decode.c  encode.c
examples/es384/: decode.c  encode.c  main.c
examples/es512/: decode.c  encode.c  main.c
examples/hs256/: decode.c  encode.c  main.c
examples/hs384/: decode.c  encode.c  main.c
examples/hs512/: decode.c  encode.c  main.c
examples/ps256/: decode.c  encode.c
examples/ps384/: decode.c  encode.c
examples/ps512/: decode.c  encode.c
examples/rs256/: decode.c  encode.c  main.c
examples/rs384/: decode.c  encode.c  main.c
examples/rs512/: decode.c  encode.c  main.c
include/l8w8jwt/: algs.h  base64.h  claim.h  decode.h  encode.h  hs256.h  hs384.h  hs512.h  l8w8jwt.h  l8w8jwt_hs256.h  printferr.h  retcodes.h  timehelper.h  util.h  version.h
lib/: README.md
lib/checknum/: .appveyor.yml  README.md
lib/checknum/include/: checknum.h
lib/checknum/tests/: CMakeLists.txt  README.md  tests.c
lib/chillbuff/: .appveyor.yml  .clang-format  .gitattributes  CMakeLists.txt  LICENSE  README.md  doxyfile  run-tests.sh  test.sh
lib/chillbuff/.circleci/: config.yml
lib/chillbuff/.github/ISSUE_TEMPLATE/: bug_report.md
lib/chillbuff/docs/: annotated.html  chillbuff_8h.html  chillbuff_8h__incl.map  chillbuff_8h__incl.md5  chillbuff_8h_source.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  structchillbuff-members.html  structchillbuff.html
lib/chillbuff/docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
lib/chillbuff/include/: chillbuff.h
lib/chillbuff/tests/: CMakeLists.txt  README.md  chillbuff_tests.c
lib/mbedtls/: ChangeLog
lib/mbedtls/doxygen/: mbedtls.doxyfile
lib/mbedtls/tests/suites/: test_suite_base64.data
src/: base64.c  claim.c  decode.c  encode.c  hs256.c  hs384.c  hs512.c  util.c  version.c
tests/: CMakeLists.txt  README.md  testkeys.h  tests.c
